# hiprfish-plb

./: AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
docs/: PROBE_DESIGN_INPUTS.md  WORKFLOW_CONTRACTS.md
image-analysis/hiprfish-image-analysis-ecoli-snr/: hiprfish_imaging_collect_measurement_results.py
image-analysis/hiprfish-image-analysis-microbiome-gut/: hiprfish_imaging_classify_spectra.py
probe-design/hiprfish-probe-design-consensus/: hiprfish_collect_taxon_best_probes.py
probe-design/hiprfish-probe-design-molecule/: hiprfish_collect_taxon_best_probes.py
scripts/smoke/: check_config.py  check_cython.py  check_env.py  check_outputs.py
src/hiprfish_plb/: __init__.py  cli_compat.py  config.py  cython_support.py  logging_utils.py  paths.py  workflow_io.py
tests/: test_cli_compat.py  test_config.py  test_cython_support.py  test_logging_utils.py  test_paths.py  test_workflow_io.py
