[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hiprfish-plb"
version = "0.1.0"
description = "Engineering support package for hiprfish-plb workflows"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
